--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "easings": "^1.1.1",
     "next": "^5.1.0",
+    "nextjs-export-path-map": "^0.1.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "styled-components": "^3.2.6"
