--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "export": "npm run build && next export"
   },
   "dependencies": {
     "easings": "^1.1.1",
-    "next": "^5.1.0",
+    "next": "^12.0.7",
     "nextjs-export-path-map": "^0.1.2",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "styled-components": "^3.2.6"
   }
 }
