--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "export": "npm run build && next export"
   },
   "dependencies": {
-    "easings": "^1.1.1",
-    "next": "^12.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^3.2.6"
+    "@squircle-js/react": "^1.2.0",
+    "next": "^15.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "styled-components": "6.1.13"
   }
 }
