--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "export": "npm run build && next export"
   },
   "dependencies": {
+    "@johnn-e/react-mesh-gradient": "^1.1.1",
     "@squircle-js/react": "^1.2.0",
+    "framer-motion": "^11.11.11",
     "next": "^15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
