--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@johnn-e/react-mesh-gradient": "^1.1.1",
     "@squircle-js/react": "^1.2.0",
+    "@svgr/webpack": "^8.1.0",
     "framer-motion": "^11.11.11",
     "next": "^15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-svg-color": "^2.3.0",
     "styled-components": "6.1.13"
   }
 }
