--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-dom": "^18.3.1",
     "react-svg-color": "^2.3.0",
     "styled-components": "6.1.13"
+  },
+  "devDependencies": {
+    "@swc/plugin-styled-components": "^5.0.0",
   }
 }
