--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "styled-components": "6.1.13"
   },
   "devDependencies": {
-    "@swc/plugin-styled-components": "^5.0.0",
+    "@swc/plugin-styled-components": "^5.0.0"
   }
 }
